--- a/theBankApi/appsettings.json
+++ b/theBankApi/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=localhost;Initial Catalog=BankAppData;Integrated Security=SSPI; TrustServerCertificate=True;"
+  },
+
+  "JwtSettings": {
+    "SecretKey": "OurSuperSecretKeyForOurApi123456789hushhush",
+    "Issuer": "http://localhost:5226",
+    "Audience": "http://localhost:5226",
+    "TokenExpirationInHours": "1"
   }
 }
